--- a/expressjs-backend/package.json
+++ b/expressjs-backend/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "backend.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "dev": "nodemon backend.js",
-  "start": "node backend.js"
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon backend.js",
+    "start": "node backend.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
